--- a/src/index.html
+++ b/src/index.html
@@ -55,6 +55,6 @@
     </section>
   </body>
 
-  <script src="./scripts/index.js"></script>
+  <script  type="module" src="./scripts/index.js"></script>
 
 </html>
